# QCoDeS_KeLab

./: Install.docx  QCoDeS.bat  README.md  SQUID-1.ipynb  Untitled-1.ipynb  init_fridge_v2.py  main.py  pyproject.toml  run_QCoDeS.bat  run_plottr.bat  run_plottr.sh  sweeps.py  sweeps_Christian.py  sweeps_Prasanna.py  sweeps_v2.py
.ipynb_checkpoints/: init_fridge-checkpoint.py
Test/: Analysis_functions.ipynb  Analysis_functions.py  Analysis_functions_v3.py  Analysis_v3.ipynb  Test-3.ipynb  Test-5.ipynb  Untitled-1.ipynb
drivers/: Kei213.py  Kei213_2.py  MercuryiPS_RS232.py  Model_332.py  Model_340.py  Model_4G.py  Model_CS4.py  Model_LM500.py  Model_LM510_USB.py  Oxford_triton.py  SMB100A.py  american_magnetics_AMI430.py  drivers - Shortcut.lnk  visa_interface.py  yokogawa7651.py
fridge_specific/: init_BF1_v2.py  init_BF1_v3.py  init_CF1400.py  init_CF900.py  init_Cactus.py  init_Fristi.py  init_Gecko.py  init_Janis.py  init_SG1.py  init_VectorJanis.py
fridge_specific/.ipynb_checkpoints/: init_BF1-checkpoint.py
misc/: Plottr.bat  QCoDeS_start_2DTopo.bat  UtoK.ffs_batch  UtoK.ffs_gui
misc/for_local/notebooks/: cool_down.ipynb  example_measurements.ipynb
misc/for_local/scripts/: init_VectorJanis.py  init_fridge.py  sweeps.py
misc/for_local/shortcuts/: QCoDeS_start_local.bat  start_plottr.bat
misc_qing/: Plottr.bat
personal_scripts/: 1111111.ipynb  Data importing and plotting.ipynb  measurement_example_V2.ipynb  measurements_example-Copy1.ipynb  measurements_example.ipynb
personal_scripts/.ipynb_checkpoints/: 1111111-checkpoint.ipynb  Sean-checkpoint.ipynb  measurements_example-Copy1-checkpoint.ipynb  measurements_example-checkpoint.ipynb
personal_scripts/Albert/: Albert_2024-05-20_01.db  Albert_2025-01-03_03.db  Albert_2025-01-03_03.db-shm  Albert_2025-01-03_03.db-wal  Tset-1_v2.ipynb
personal_scripts/Albert/005-2/: 005-2_2024-11-26_01.db
personal_scripts/Albert/020-1Shankar/: 020-1.ipynb  020-1ICP.ipynb  020-1ICP_LT.ipynb  020-1Shankar_2024-08-25_01.db-shm  020-1Shankar_2024-09-15_01.db-shm  020-1Shankar_2024-09-15_01.db-wal  020-1_LT.ipynb
personal_scripts/Albert/024-1Shankar/: 024-1_LT.ipynb
personal_scripts/Albert/IVVI/: Albert_2025-01-03_01.db  Albert_2025-01-03_02.db  Albert_2025-01-03_03.db  IVVI_1kohms.ipynb
personal_scripts/Albert/RT/: RT.ipynb  RT_2025-04-21_01.db  RT_2025-04-21_01.db-wal  RT_2025-05-16_01.db  RT_2025-05-16_01.db-shm  RT_2025-05-16_01.db-wal
personal_scripts/Albert/Sample001/: Albert_2024-05-20_01.db  Sample001.ipynb  Sample001_v2.ipynb
personal_scripts/HE/: measurements_example.ipynb  out.csv  out2.csv  out3.csv  out4.csv  實驗5.ipynb
personal_scripts/HE/.ipynb_checkpoints/: measurements_example-checkpoint.ipynb  實驗5-checkpoint.ipynb
personal_scripts/IVVI/: IVVI.ipynb
personal_scripts/Kay/: AnaF141.ipynb  Kay_2024-07-08_01.db  Kay_2024-07-08_01.db-shm  Kay_2024-07-08_01.db-wal  Kay_2024-07-17_01.db  Kay_2024-07-17_04.db-shm  Kay_2024-07-17_04.db-wal  MeaF141.ipynb  Measurement.ipynb  R013.ipynb
personal_scripts/Thomas/: measurement_example_V2.ipynb
personal_scripts/UE/: Analysis.ipynb  Measurement.ipynb  init_BF1.py
personal_scripts/Yeep/: Analysis.ipynb  Init3.py  Measurement.ipynb  Measurement2.ipynb  TaS2_101, 102_2025-05-09_01.db
personal_scripts/data/: qcodes_personal_scripts_2024-02-05_01.db  qcodes_personal_scripts_2024-03-27_01.db  qcodes_personal_scripts_2024-04-24_03.db  qcodes_personal_scripts_2024-04-24_04.db  qcodes_personal_scripts_2024-04-24_05.db  qcodes_personal_scripts_2024-04-25_01.db-shm  qcodes_personal_scripts_2024-05-06_01.db  qcodes_personal_scripts_2024-05-06_01.db-shm  qcodes_personal_scripts_2024-05-06_01.db-wal  qcodes_personal_scripts_2024-05-09_01.db  qcodes_personal_scripts_2024-05-09_01.db-shm  qcodes_personal_scripts_2024-05-09_01.db-wal  qcodes_personal_scripts_2024-05-10_01.db  qcodes_personal_scripts_2024-05-10_01.db-shm  qcodes_personal_scripts_2024-05-10_01.db-wal  qcodes_personal_scripts_2024-05-10_02.db  qcodes_personal_scripts_2024-05-10_02.db-shm  qcodes_personal_scripts_2024-05-10_02.db-wal  qcodes_personal_scripts_2024-05-17_01.db  qcodes_personal_scripts_2024-05-17_01.db-shm  qcodes_personal_scripts_2024-05-17_01.db-wal  qcodes_personal_scripts_2024-05-17_02.db-shm  qcodes_personal_scripts_2024-05-17_02.db-wal
qcodes/: sweeps.py  sweeps_Christian.py  sweeps_Nikos.py  sweeps_Prasanna.py  sweeps_Qing.py  sweeps_Yining.ipynb
qcodes/.ipynb_checkpoints/: init_fridge-checkpoint.py
(+107 files in other folders)
