[project]
name = "qcodes-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alabaster==1.0.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "autodocsumm==0.2.14",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "broadbean==0.14.0",
    "certifi==2025.1.31",
    "cf-xarray==0.10.5",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "coverage==7.8.0",
    "cycler==0.12.1",
    "dask==2025.3.0",
    "datetime>=5.5",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "deepdiff==8.4.2",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "docutils==0.21.2",
    "execnet==2.1.1",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "fonttools==4.57.0",
    "fsspec==2025.3.2",
    "furo==2024.8.6",
    "h5netcdf==1.6.1",
    "h5py==3.13.0",
    "hickle==5.0.3",
    "hypothesis==6.131.6",
    "idna==3.10",
    "imagesize==1.4.1",
    "importlib-metadata==8.6.1",
    "iniconfig==2.1.0",
    "ipykernel==6.29.5",
    "ipython==9.1.0",
    "ipywidgets==8.1.6",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-widgets==3.0.14",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "libcst==1.7.0",
    "locket==1.0.0",
    "lxml==5.3.2",
    "lxml-stubs==0.5.1",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nbsphinx==0.9.6",
    "nest-asyncio==1.6.0",
    "numpy==2.2.4",
    "opentelemetry-api==1.32.1",
    "orderly-set==5.4.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pandas-stubs==2.2.3.250308",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "partd==1.4.2",
    "pdf2image>=1.17.0",
    "pillow==11.2.1",
    "pint>=0.24.4",
    "platformdirs==4.3.7",
    "plotly>=6.1.0",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pyelftools==0.32",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pyppt>=0.2.2",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.0",
    "pytest-rerunfailures==15.0",
    "pytest-xdist==3.6.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyvisa==1.15.0",
    "pyvisa-sim==0.7.0",
    "pywin32==310 ; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "qcodes>=0.52.0",
    "qcodes-loop==0.1.3",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.24.0",
    "ruamel-yaml==0.18.10",
    "schema==0.7.7",
    "scipy==1.15.2",
    "six==1.17.0",
    "snowballstemmer==2.2.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "sphinx==8.2.3",
    "sphinx-basic-ng==1.0.0b2",
    "sphinx-favicon==1.0.1",
    "sphinx-issues==5.0.1",
    "sphinx-jsonschema==1.19.1",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxcontrib-towncrier==0.5.0a0",
    "stack-data==0.6.3",
    "stringparser==0.7",
    "tabulate==0.9.0",
    "tinycss2==1.4.0",
    "toolz==1.0.0",
    "tornado==6.4.2",
    "towncrier==24.8.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-jsonschema==4.23.0.20241208",
    "types-pytz==2025.2.0.20250326",
    "types-pywin32==310.0.0.20250319",
    "types-requests==2.32.0.20250328",
    "types-tabulate==0.9.0.20241207",
    "types-tqdm==4.67.0.20250404",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "uncertainties==3.2.3",
    "urllib3==2.4.0",
    "versioningit==3.1.2",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.2",
    "xarray==2025.3.1",
    "zhinst-core==25.1.0.834",
    "zhinst-qcodes==0.6.0",
    "zhinst-timing-models==25.1.0",
    "zhinst-toolkit==0.7.1",
    "zhinst-utils==0.7.0",
    "zipp==3.21.0",
]
